--- a/diseño/css/style.css
+++ b/diseño/css/style.css
@@ -29,7 +29,7 @@ body{
 .gral-btn{
     background-color: var(--color-rojo-brillante);
     color: var(--color-gris-claro);
-    padding: 0.8rem 1.8rem;
+    padding: 0.8rem 1.6rem;
     border: none;
     border-radius: 35px;
     box-shadow: 0px 4px 8px rgba(242, 97, 59, 0.5);
@@ -70,6 +70,8 @@ header nav img[alt="logo-manage"]{
 }
 /**************MAIN****************/
 /*SECTION 1*/
+
+/*first-text*/
 main .first-section{
     width: 100%;
     display: flex;
@@ -101,14 +103,13 @@ main .first-section .first-text p{
 }
 
 main .first-section .first-text button{
-    margin: 1.3rem 0;
+    margin: 1.3rem 0 4em 0;
 }
 
-/*SECTION 2*/
+/*second-text*/
 main .first-section .second-text{
     width: 100%;
     padding: 0 1.6rem;
-    margin-top: 2.8rem;
     text-align: center;
 }
 
@@ -118,7 +119,62 @@ main .first-section .second-text h2{
 }
 
 main .first-section .second-text p{
+    margin: 1rem 0;
+}
+
+/*third-text*/
+main .first-section .third-text{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main .first-section .third-text > div{
+    padding-left: 1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     margin: 1.2rem 0;
+}
+
+main .first-section .third-text > div > div{
+    margin: 0.8rem 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+}
+
+main .first-section .third-text > div > div button{
+    box-shadow: 64rem 0 0 62rem var(--color-rojo-palido);
+}
+
+main .first-section .third-text > div > div h4{
+    color: var(--color-azul-oscuro);
+}
+
+/*SECTION 2*/
+main .second-section{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 2.8rem;
+}
+
+main .second-section > h1{
+    font-size: 1.9rem;
+    color: var(--color-azul-oscuro);
+}
+
+main .second-section > div{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 /*************FOOTER***************/
