--- a/diseño/css/style.css
+++ b/diseño/css/style.css
@@ -29,6 +29,7 @@ body{
 .gral-btn{
     background-color: var(--color-rojo-brillante);
     color: var(--color-gris-claro);
+    font-size: 0.8rem;
     padding: 0.8rem 1.6rem;
     border: none;
     border-radius: 35px;
@@ -168,26 +169,115 @@ main .second-section > h1{
     color: var(--color-azul-oscuro);
 }
 
-main .second-section > div{
+main .second-section .slider{
     width: 100%;
+    position: relative;
+    height: 360px;
+}
+
+main .second-section .slider > div{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 2rem 0;
+    margin: 3rem 0;
     transition: all 0.5s;
 }
 
-main .second-section > div > img{
+main .second-section .slider > div > img{
     width: 70px;
 }
 
-main .second-section > div > h6{
+main .second-section .slider > div > h6{
     margin: 1.4rem 0; 
 } 
 
+main .second-section > aside{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.25rem;
+}
+    
+main .second-section > aside > a{
+    text-decoration: none;
+    width: 8px;
+    height: 8px;
+    border: 1px solid var(--color-rojo-brillante);
+    border-radius: 100px;
+}
+
+main .second-section > aside > a:focus{
+    background-color: var(--color-rojo-brillante);
+}
+
+main .second-section > button{
+    margin: 2.5rem 0;
+}
+
+/*SECTION 3*/
+main .third-section{
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5.4rem 2rem;
+    background-color: var(--color-rojo-brillante);
+}
+
+main .third-section > img{
+    position: absolute;
+    top: 14%;
+    left: 0;
+}
+
+main .third-section > h1{
+    font-size: 2.3rem;
+    color: var(--color-gris-claro);
+    margin: 1.6rem 0;
+}
+
+main .third-section > button{
+    background-color: var(--color-gris-claro);
+    color: var(--color-rojo-brillante);
+}
 /* ~ */
 /*************FOOTER***************/
 footer{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-azul-super-oscuro);
+    color: var(--color-gris-claro);
+}
+
+footer .form-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2.8rem 0;
+}
+
+footer .form-container input[type="email"]{
+    background-color: var(--color-gris-claro);
+    font-size: 0.8rem;
+    padding: 0.8rem 1.6rem;
+    margin-right: 0.2rem;
+    border: none;
+    border-radius: 35px;
+    outline: none;
+} 
+
+footer .form-container .gral-btn{
+    box-shadow: none;
 }
