--- a/diseño/css/style.css
+++ b/diseño/css/style.css
@@ -43,14 +43,21 @@ body{
     line-height: 1.5rem;
 }
 /*FONDOS*/
-body > img{
-    width: 470px;
+body > img.first-cilindre{
+    width: 30rem;
     position: absolute;
     z-index: -1;
     top: -4%;
     left: 13%;
 }
 
+body > img.second-cilindre{
+    width: 25rem;
+    position: absolute;
+    z-index: -1;
+    top: 16%;
+    left: 56%;
+}
 /***************NAV****************/
 header{
     width: 100%;
@@ -104,7 +111,7 @@ main .first-section .first-text p{
 }
 
 main .first-section .first-text button{
-    margin: 1.3rem 0 4em 0;
+    margin: 1.3rem 0 7rem 0;
 }
 
 /*second-text*/
@@ -128,6 +135,7 @@ main .first-section .third-text{
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 1.2rem;
 }
 
 main .first-section .third-text > div{
@@ -271,7 +279,7 @@ footer .form-container{
 footer .form-container input[type="email"]{
     background-color: var(--color-gris-claro);
     font-size: 0.8rem;
-    padding: 0.8rem 1.6rem;
+    padding: 0.8rem 5rem 0.8rem 1.3rem;
     margin-right: 0.2rem;
     border: none;
     border-radius: 35px;
@@ -280,4 +288,48 @@ footer .form-container input[type="email"]{
 
 footer .form-container .gral-btn{
     box-shadow: none;
+}
+
+footer .list-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 0 3rem;
+}
+
+footer .list-container > div:nth-child(1){
+    flex-basis: 60%;
+}
+
+footer .list-container > div > ul > li{
+    margin: 0.8rem 0;
+    font-size: 0.9rem;
+}
+
+footer .icons-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1.8rem;
+}
+
+footer .icons-container > img{
+    width: 2rem;
+}
+
+footer .logo-container{
+    width: 100%;
+    padding: 3rem 0;
+    text-align: center;
+}
+
+footer .logo-container > img{
+    width: 10rem;
+}
+
+footer > p{
+    color: var(--color-gris);
+    font-size: 0.7rem;
+    margin-bottom: 1.4rem;
 }
